--- a/test/integration/targets/ec2_vpc_route_table/tasks/main.yml
+++ b/test/integration/targets/ec2_vpc_route_table/tasks/main.yml
@@ -61,6 +61,33 @@
       <<: *aws_connection_info
     register: nat_gateway
 
+# FIXME:
+#    The full traceback is:
+#    Traceback (most recent call last):
+#      File "/tmp/ansible_7v93st3b/ansible_module_ec2_vpc_route_table.py", line 721, in <module>
+#        main()
+#      File "/tmp/ansible_7v93st3b/ansible_module_ec2_vpc_route_table.py", line 713, in main
+#        result = ensure_route_table_present(connection, module)
+#      File "/tmp/ansible_7v93st3b/ansible_module_ec2_vpc_route_table.py", line 656, in ensure_route_table_present
+#        check_mode=module.check_mode, purge_routes=purge_routes)
+#      File "/tmp/ansible_7v93st3b/ansible_module_ec2_vpc_route_table.py", line 436, in ensure_routes
+#        routes_to_match = [route for route in route_table['Routes']]
+#    TypeError: 'NoneType' object is not subscriptable
+#  - name: CHECK MODE - route table should be created
+#    ec2_vpc_route_table:
+#      vpc_id: "{{ vpc.vpc.id }}"
+#      tags:
+#        Public: "true"
+#        Name: "Public route table"
+#      <<: *aws_connection_info
+#    check_mode: true
+#    register: check_mode_results
+
+#  - name: assert that the public route table would be created
+#    assert:
+#      that:
+#        - check_mode_results.changed
+
   - name: create public route table
     ec2_vpc_route_table:
       vpc_id: "{{ vpc.vpc.id }}"
@@ -79,6 +106,21 @@
         - create_public_table.route_table.routes|length == 1
         - create_public_table.route_table.associations|length == 0
 
+  - name: CHECK MODE - route table should already exist
+    ec2_vpc_route_table:
+      vpc_id: "{{ vpc.vpc.id }}"
+      tags:
+        Public: "true"
+        Name: "Public route table"
+      <<: *aws_connection_info
+    check_mode: True
+    register: check_mode_results
+
+  - name: assert the table already exists
+    assert:
+      that:
+        - not check_mode_results.changed
+
   - name: recreate public route table
     ec2_vpc_route_table:
       vpc_id: "{{ vpc.vpc.id }}"
@@ -92,6 +134,24 @@
     assert:
       that:
         - not recreate_public_route_table.changed
+
+  - name: CHECK MODE - add route to public route table
+    ec2_vpc_route_table:
+      vpc_id: "{{ vpc.vpc.id }}"
+      tags:
+        Public: "true"
+        Name: "Public route table"
+      routes:
+      - dest: 0.0.0.0/0
+        gateway_id: igw
+      <<: *aws_connection_info
+    check_mode: True
+    register: check_mode_results
+
+  - name: assert a route would be added
+    assert:
+      that:
+        - check_mode_results.changed
 
   - name: add a route to public route table
     ec2_vpc_route_table:
@@ -110,6 +170,25 @@
       that:
         - add_routes.changed
         - add_routes.route_table.routes|length == 2
+
+  - name: CHECK MODE - add subnets to public route table
+    ec2_vpc_route_table:
+      vpc_id: "{{ vpc.vpc.id }}"
+      tags:
+        Public: "true"
+        Name: "Public route table"
+      routes:
+      - dest: 0.0.0.0/0
+        gateway_id: igw
+      subnets: "{{ vpc_subnets|json_query('subnets[?tags.Public == `True`].id') }}"
+      <<: *aws_connection_info
+    check_mode: True
+    register: check_mode_results
+
+  - name: assert the subnets would be added to the route table
+    assert:
+      that:
+        - check_mode_results.changed
 
   - name: add subnets to public route table
     ec2_vpc_route_table:
@@ -141,6 +220,23 @@
         gateway_id: igw
       <<: *aws_connection_info
     register: add_routes
+
+  - name: CHECK MODE - no routes but purge_routes set to false
+    ec2_vpc_route_table:
+      vpc_id: "{{ vpc.vpc.id }}"
+      tags:
+        Public: "true"
+        Name: "Public route table"
+      purge_routes: no
+      subnets: "{{ vpc_subnets|json_query('subnets[?tags.Public == `True`].id') }}"
+      <<: *aws_connection_info
+    check_mode: True
+    register: check_mode_results
+
+  - name: assert no routes would be removed
+    assert:
+      that:
+        - not check_mode_results.changed
 
   - name: rerun with purge_routes set to false
     ec2_vpc_route_table:
@@ -198,6 +294,25 @@
         - not no_purge_tags.changed
         - "'Public' in no_purge_tags.route_table.tags and no_purge_tags.route_table.tags['Public'] == 'true'"
 
+  - name: CHECK MODE - purge subnets
+    ec2_vpc_route_table:
+      vpc_id: "{{ vpc.vpc.id }}"
+      routes:
+      - dest: 0.0.0.0/0
+        gateway_id: igw
+      subnets: []
+      tags:
+        Public: "true"
+        Name: "Public route table"
+      <<: *aws_connection_info
+    check_mode: True
+    register: check_mode_results
+
+  - name: assert subnets would be removed
+    assert:
+      that:
+        - check_mode_results.changed
+
   - name: purge subnets
     ec2_vpc_route_table:
       vpc_id: "{{ vpc.vpc.id }}"
@@ -218,6 +333,22 @@
         - purge_subnets.route_table.associations|length == 0
         - purge_subnets.route_table.id == create_public_table.route_table.id
 
+  - name: CHECK MODE - purge routes
+    ec2_vpc_route_table:
+      vpc_id: "{{ vpc.vpc.id }}"
+      tags:
+        Public: "true"
+        Name: "Public route table"
+      <<: *aws_connection_info
+      routes: []
+    check_mode: True
+    register: check_mode_results
+
+  - name: assert routes would be removed
+    assert:
+      that:
+        - check_mode_results.changed
+
   - name: purge routes
     ec2_vpc_route_table:
       vpc_id: "{{ vpc.vpc.id }}"
@@ -234,6 +365,24 @@
         - purge_routes.changed
         - purge_routes.route_table.routes|length == 1
         - purge_routes.route_table.id == create_public_table.route_table.id
+
+  - name: CHECK MODE - update tags
+    ec2_vpc_route_table:
+      vpc_id: "{{ vpc.vpc.id }}"
+      route_table_id: "{{ create_public_table.route_table.id }}"
+      lookup: id
+      purge_tags: yes
+      tags:
+        Name: Public route table
+        Updated: new_tag
+      <<: *aws_connection_info
+    check_mode: True
+    register: check_mode_results
+
+  - name: assert tags would be changed
+    assert:
+      that:
+        - check_mode_results.changed
 
   - name: update tags
     ec2_vpc_route_table:
@@ -262,6 +411,37 @@
       <<: *aws_connection_info
     register: nat_gateway
 
+# FIXME:
+#    The full traceback is:
+#    Traceback (most recent call last):
+#      File "/tmp/ansible_5g1e834v/ansible_module_ec2_vpc_route_table.py", line 721, in <module>
+#        main()
+#      File "/tmp/ansible_5g1e834v/ansible_module_ec2_vpc_route_table.py", line 713, in main
+#        result = ensure_route_table_present(connection, module)
+#      File "/tmp/ansible_5g1e834v/ansible_module_ec2_vpc_route_table.py", line 656, in ensure_route_table_present
+#        check_mode=module.check_mode, purge_routes=purge_routes)
+#      File "/tmp/ansible_5g1e834v/ansible_module_ec2_vpc_route_table.py", line 436, in ensure_routes
+#        routes_to_match = [route for route in route_table['Routes']]
+#    TypeError: 'NoneType' object is not subscriptable
+#  - name: CHECK MODE - create private route table
+#    ec2_vpc_route_table:
+#      vpc_id: "{{ vpc.vpc.id }}"
+#      tags:
+#        Public: "false"
+#        Name: "Private route table"
+#      routes:
+#      - gateway_id: "{{ nat_gateway.nat_gateway_id }}"
+#        dest: 0.0.0.0/0
+#      subnets: "{{ vpc_subnets|json_query('subnets[?tags.Public == `False`].id') }}"
+#      <<: *aws_connection_info
+#    check_mode: True
+#    register: check_mode_results
+
+#  - name: assert the route table would be created
+#    assert:
+#      that:
+#        - check_mode_results.changed
+
   - name: create private route table
     ec2_vpc_route_table:
       vpc_id: "{{ vpc.vpc.id }}"
@@ -282,6 +462,22 @@
         - create_private_table.route_table.id != create_public_table.route_table.id
         - "'Public' in create_private_table.route_table.tags"
 
+  - name: CHECK MODE - destroy public route table by tags
+    ec2_vpc_route_table:
+      vpc_id: "{{ vpc.vpc.id }}"
+      state: absent
+      tags:
+        Updated: new_tag
+        Name: Public route table
+      <<: *aws_connection_info
+    check_mode: True
+    register: check_mode_results
+
+  - name: assert the route table would be deleted
+    assert:
+      that:
+        check_mode_results.changed
+
   - name: destroy public route table by tags
     ec2_vpc_route_table:
       vpc_id: "{{ vpc.vpc.id }}"
@@ -296,6 +492,20 @@
     assert:
       that:
         - destroy_table.changed
+
+  - name: CHECK MODE - redestroy public route table
+    ec2_vpc_route_table:
+      route_table_id: "{{ create_public_table.route_table.id }}"
+      lookup: id
+      state: absent
+      <<: *aws_connection_info
+    check_mode: True
+    register: check_mode_results
+
+  - name: assert the public route table does not exist
+    assert:
+      that:
+        - not check_mode_results.changed
 
   - name: redestroy public route table
     ec2_vpc_route_table:
