--- a/test/integration/targets/junos_l2_interface/tests/netconf/basic.yaml
+++ b/test/integration/targets/junos_l2_interface/tests/netconf/basic.yaml
@@ -13,53 +13,16 @@
     state: absent
     provider: "{{ netconf }}"
 
-- name: Setup delete vlan 100
+- name: Setup create vlans
   junos_vlan:
-    vlan_id: 100
-    name: red
-    state: absent
-    provider: "{{ netconf }}"
-  register: result
-
-- name: Setup delete vlan 200
-  junos_vlan:
-    vlan_id: 200
-    name: blue
-    state: absent
-    provider: "{{ netconf }}"
-  register: result
-
-- name: Setup delete vlan 300
-  junos_vlan:
-    vlan_id: 300
-    name: green
-    state: absent
-    provider: "{{ netconf }}"
-  register: result
-
-- name: Setup create vlan 100
-  junos_vlan:
-    vlan_id: 100
-    name: red
+    vlan_id: "{{ item.vlan_id }}"
+    name: "{{ item.name }}"
     state: present
     provider: "{{ netconf }}"
-  register: result
-
-- name: Setup create vlan 200
-  junos_vlan:
-    vlan_id: 200
-    name: blue
-    state: present
-    provider: "{{ netconf }}"
-  register: result
-
-- name: Setup create vlan 300
-  junos_vlan:
-    vlan_id: 300
-    name: green
-    state: present
-    provider: "{{ netconf }}"
-  register: result
+  with_items:
+    - { vlan_id: 100, name: red }
+    - { vlan_id: 200, name: blue }
+    - { vlan_id: 300, name: green }
 
 - name: Configure interface in access mode
   junos_l2_interface:
@@ -333,5 +296,16 @@
 - assert:
     that:
       - "result.changed == false"
+
+- name: Teradown delete vlans
+  junos_vlan:
+    vlan_id: "{{ item.vlan_id }}"
+    name: "{{ item.name }}"
+    state: absent
+    provider: "{{ netconf }}"
+  with_items:
+    - { vlan_id: 100, name: red }
+    - { vlan_id: 200, name: blue }
+    - { vlan_id: 300, name: green }
 
 - debug: msg="END junos_l2_interface netconf/basic.yaml on connection={{ ansible_connection }}"
