--- a/test/integration/targets/ezjail/tasks/test_jail2.yml
+++ b/test/integration/targets/ezjail/tasks/test_jail2.yml
@@ -1,13 +1,17 @@
-- name: test3 start jail 2
+- name: test3 start jail2
   ezjail: name=test2 state=stopped ip_addr=lo0|127.0.0.1
   register: result
 
+- name: test1 check jail count
+  raw: ezjail-admin list|wc -l|tr -d ' '
+  register: jailcount
+
 - name: test3 check jail state
-  raw: ezjail-admin list
+  raw: ezjail-admin list|grep 'DS[ ]*N\/A[ ]*127.0.0.1[ ]*test2[ ]*/usr/jails/test2'
   register: state
 
 - name: test3 check jailroot deleted
-  raw: ls /usr/jails
+  raw: ls /usr/jails|grep 'test2'
   register: jailroot
 
 - name: test3 assert
@@ -15,20 +19,24 @@
     that:
       - "result.changed"
       - "'Jail test2 created' == result.msg"
-      - "state.stdout_lines|length == 3"
-      - "state.stdout_lines[2]|search('D[ ]*[0-9]*[ ]*lo1|127.0.0.1[ ]*test2[ ]*/usr/jails/test2')"
-      - "jailroot.stdout|search('basejail[\\t]*flavours[\\t]*newjail[\\t]*test2\\r\\n')"
+      - "jailcount.stdout_lines[0] == '3'"
+      - "state.stdout != ''"
+      - "jailroot.stdout != ''"
 
-- name: test4 stop jail 2
+- name: test4 stop jail
   ezjail: name=test2 state=stopped
   register: result
 
+- name: test1 check jail count
+  raw: ezjail-admin list|wc -l|tr -d ' '
+  register: jailcount
+
 - name: test4 check jail state
-  raw: ezjail-admin list
+  raw: ezjail-admin list|grep 'DS[ ]*N\/A[ ]*127.0.0.1[ ]*test2[ ]*/usr/jails/test2'
   register: state
 
 - name: test4 check jailroot deleted
-  raw: ls /usr/jails
+  raw: ls /usr/jails|grep 'test2'
   register: jailroot
 
 - name: test4 assert
@@ -36,20 +44,24 @@
     that:
       - "not result.changed"
       - "'Jail test2 not changed' == result.msg"
-      - "state.stdout_lines|length == 3"
-      - "state.stdout_lines[2]|search('D[ ]*[0-9]*[ ]*lo1|127.0.0.1[ ]*test2[ ]*/usr/jails/test2')"
-      - "jailroot.stdout|search('basejail[\\t]*flavours[\\t]*newjail[\\t]*test2\\r\\n')"
+      - "jailcount.stdout_lines[0] == '3'"
+      - "state.stdout != ''"
+      - "jailroot.stdout != ''"
 
 - name: test5 start jail
   ezjail: name=test2 state=started
   register: result
 
+- name: test5 check jail count
+  raw: ezjail-admin list|wc -l|tr -d ' '
+  register: jailcount
+
 - name: test5 check jail state
-  raw: ezjail-admin list
+  raw: ezjail-admin list|grep 'DR[ ]*[0-9]*[ ]*127.0.0.1[ ]*test2[ ]*/usr/jails/test2'
   register: state
 
 - name: test5 check jailroot deleted
-  raw: ls /usr/jails
+  raw: ls /usr/jails|grep 'test2'
   register: jailroot
 
 - name: test5 assert
@@ -57,20 +69,24 @@
     that:
       - "result.changed"
       - "'Jail test2 started' == result.msg"
-      - "state.stdout_lines|length == 3"
-      - "state.stdout_lines[2]|search('DR[ ]*[0-9]*[ ]*lo1|127.0.0.1[ ]*test2[ ]*/usr/jails/test2')"
-      - "jailroot.stdout|search('basejail[\\t]*flavours[\\t]*newjail[\\t]*test2\\r\\n')"
+      - "jailcount.stdout_lines[0] == '3'"
+      - "state.stdout != ''"
+      - "jailroot.stdout != ''"
 
 - name: test6 start jail
   ezjail: name=test2 state=started ip_addr=lo0|127.0.0.2
   register: result
 
+- name: test6 check jail count
+  raw: ezjail-admin list|wc -l|tr -d ' '
+  register: jailcount
+
 - name: test6 check jail state
-  raw: ezjail-admin list
+  raw: ezjail-admin list|grep 'DR[ ]*[0-9]*[ ]*127.0.0.2[ ]*test2[ ]*/usr/jails/test2'
   register: state
 
 - name: test6 check jailroot deleted
-  raw: ls /usr/jails
+  raw: ls /usr/jails|grep 'test2'
   register: jailroot
 
 - name: test6 assert
@@ -78,20 +94,24 @@
     that:
       - "result.changed"
       - "'Jail test2 ip_addr updated' == result.msg"
-      - "state.stdout_lines|length == 3"
-      - "state.stdout_lines[2]|search('DR[ ]*[0-9]*[ ]*lo0|127.0.0.2[ ]*test2[ ]*/usr/jails/test2')"
-      - "jailroot.stdout|search('basejail[\\t]*flavours[\\t]*newjail[\\t]*test2\\r\\n')"
+      - "jailcount.stdout_lines[0] == '3'"
+      - "state.stdout != ''"
+      - "jailroot.stdout != ''"
 
 - name: test7 start jail 2
   ezjail: name=test2 state=started
   register: result
 
+- name: test7 check jail count
+  raw: ezjail-admin list|wc -l|tr -d ' '
+  register: jailcount
+
 - name: test7 check jail state
-  raw: ezjail-admin list
+  raw: ezjail-admin list|grep 'DR[ ]*[0-9]*[ ]*127.0.0.2[ ]*test2[ ]*/usr/jails/test2'
   register: state
 
 - name: test7 check jailroot deleted
-  raw: ls /usr/jails
+  raw: ls /usr/jails|grep 'test2'
   register: jailroot
 
 - name: test7 assert
@@ -99,20 +119,24 @@
     that:
       - "not result.changed"
       - "'Jail test2 not changed' == result.msg"
-      - "state.stdout_lines|length == 3"
-      - "state.stdout_lines[2]|search('DR[ ]*[0-9]*[ ]*lo0|127.0.0.2[ ]*test2[ ]*/usr/jails/test2')"
-      - "jailroot.stdout|search('basejail[\\t]*flavours[\\t]*newjail[\\t]*test2\\r\\n')"
+      - "jailcount.stdout_lines[0] == '3'"
+      - "state.stdout != ''"
+      - "jailroot.stdout != ''"
 
 - name: test8 start jail 2
   ezjail: name=test2 state=started enabled=no
   register: result
 
+- name: test8 check jail count
+  raw: ezjail-admin list|wc -l|tr -d ' '
+  register: jailcount
+
 - name: test8 check jail state
-  raw: ezjail-admin list
+  raw: ezjail-admin list|grep 'DRN[ ]*[0-9]*[ ]*127.0.0.2[ ]*test2[ ]*/usr/jails/test2'
   register: state
 
 - name: test8 check jailroot deleted
-  raw: ls /usr/jails
+  raw: ls /usr/jails|grep 'test2'
   register: jailroot
 
 - name: test8 assert
@@ -120,20 +144,24 @@
     that:
       - "result.changed"
       - "'Jail test2 disabled' == result.msg"
-      - "state.stdout_lines|length == 3"
-      - "state.stdout_lines[2]|search('DRN[ ]*[0-9]*[ ]*lo0|127.0.0.2[ ]*test2[ ]*/usr/jails/test2')"
-      - "jailroot.stdout|search('basejail[\\t]*flavours[\\t]*newjail[\\t]*test2\\r\\n')"
+      - "jailcount.stdout_lines[0] == '3'"
+      - "state.stdout != ''"
+      - "jailroot.stdout != ''"
 
 - name: test9 start jail 2
   ezjail: name=test2 state=stopped enabled=no
   register: result
 
+- name: test9 check jail count
+  raw: ezjail-admin list|wc -l|tr -d ' '
+  register: jailcount
+
 - name: test9 check jail state
-  raw: ezjail-admin list
+  raw: ezjail-admin list|grep 'DSN[ ]*N\/A[ ]*127.0.0.2[ ]*test2[ ]*/usr/jails/test2'
   register: state
 
 - name: test9 check jailroot deleted
-  raw: ls /usr/jails
+  raw: ls /usr/jails|grep 'test2'
   register: jailroot
 
 - name: test9 assert
@@ -141,26 +169,33 @@
     that:
       - "result.changed"
       - "'Jail test2 stopped' == result.msg"
-      - "state.stdout_lines|length == 3"
-      - "state.stdout_lines[2]|search('DN[ ]*[0-9]*[ ]*lo0|127.0.0.2[ ]*test2[ ]*/usr/jails/test2')"
-      - "jailroot.stdout|search('basejail[\\t]*flavours[\\t]*newjail[\\t]*test2\\r\\n')"
+      - "jailcount.stdout_lines[0] == '3'"
+      - "state.stdout != ''"
+      - "jailroot.stdout != ''"
 
 - name: test10 delete jail 2
   ezjail: name=test2 state=absent
   register: result
 
+- name: test10 check jail count
+  raw: ezjail-admin list|wc -l|tr -d ' '
+  register: jailcount
+
 - name: test10 check jail state
-  raw: ezjail-admin list
+  raw: ezjail-admin list|grep 'DRN[ ]*[0-9]*[ ]*127.0.0.2[ ]*test2[ ]*/usr/jails/test2'
   register: state
+  ignore_errors: true
 
 - name: test10 check jailroot deleted
-  raw: ls /usr/jails
+  raw: ls /usr/jails|grep 'test2'
   register: jailroot
+  ignore_errors: true
 
 - name: test10 assert
   assert:
     that:
       - "result.changed"
       - "'Jail test2 deleted' == result.msg"
-      - "state.stdout_lines|length == 2"
-      - "jailroot.stdout|search('basejail[\\t]*flavours[\\t]*newjail\\r\\n')"
+      - "jailcount.stdout_lines[0] == '2'"
+      - "state.stdout == ''"
+      - "jailroot.stdout == ''"
